fix: callout wrapping

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -93,6 +93,9 @@
   .prose h2#table-of-contents + p {
     @apply hidden;
   }
+  .prose .callout {
+    word-wrap: break-word;
+  }
 
   /* ===== scrollbar ===== */
   html {
